fixed items jumping on hover by introducing span(like on main site) some styles clean-up

--- a/dis/index.css
+++ b/dis/index.css
@@ -1875,36 +1875,7 @@ header {
   header {
     padding: 0 16px; } }
 
-.hnItems a,
-footer .ftItems a {
-  padding: 0.5rem 0;
-  margin: 0 1.7rem;
-  color: #887f95;
-  font-size: 1.05rem;
-  font-weight: 400;
-  border: 0;
-  transition: all .35s ease-in-out;
-  -webkit-transition: all .35s ease-in-out; }
-
-.hnItems li:first-child > a,
-.hnItems li:nth-child(2) > a,
-.hnItems li:nth-child(3) > a {
-  margin: 0;
-  padding: 8px 0; }
-
-.hnItems a:hover {
-  border-bottom: 1.9px solid #38c690;
-  padding-bottom: 4px;
-  transition-duration: .5s; }
-
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  padding: 1rem 15px;
-  margin: 0 auto; }
-
+/* Logo styling desktop */
 .hnLogo {
   max-width: 171px;
   height: 47px;
@@ -1918,33 +1889,67 @@ nav {
   display: inline-block;
   margin-right: 1rem; }
 
+.hnItems a,
+footer .ftItems a {
+  padding: 0.5rem 0;
+  margin: 0 1.7rem;
+  color: #887f95;
+  font-size: 1.05rem;
+  font-weight: 400;
+  border: 0;
+  transition: all .35s ease-in-out;
+  -webkit-transition: all .35s ease-in-out; }
+
+/* Menu items styling */
+.hnItems li:first-child > a,
+.hnItems li:nth-child(2) > a,
+.hnItems li:nth-child(3) > a {
+  margin: 0;
+  padding: 7px 0 9px 0; }
+
+.hnItems a:hover > .nav-link {
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s; }
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  padding: 1rem 15px;
+  margin: 0 auto; }
+
 /* Main menu styling */
 .navRightItems {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  list-style: none;
   display: flex;
   flex: 1 0 auto;
   align-items: center; }
 
 .navRightItems ul {
   display: flex;
+  list-style: none;
   font-size: 1.05rem;
   justify-content: center;
   flex-direction: row;
   align-items: center;
   flex: 1 0 100%; }
 
-/* Since it's flex margins not needed, and specified indivudually */
+/* Since it's flex margins not needed, and specified indivudually when needed */
 .navRightItems li {
   display: block;
   margin: 0;
   padding: 0;
-  line-height: 1.6em; }
+  line-height: 1.6em;
+  font-size: 1.05rem; }
 
 .navRightItems li a {
   display: block;
   position: relative; }
+
+.navRightItems li a .nav-link {
+  display: inline; }
 
 .hnItem.contactButton {
   display: none; }
@@ -1972,7 +1977,7 @@ nav {
   background-color: #38c690;
   border-color: #38c690;
   color: #fff;
-  padding: 10px 30px;
+  padding: 9px 30px 11px;
   margin: 0;
   font-size: 1.05rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
@@ -1988,22 +1993,31 @@ nav {
 .navRightItems li:nth-child(4) > a:hover,
 .navRightItems li:nth-child(4) > a:focus {
   background: #30a87a;
-  transform: translateY(-3px);
-  border-color: #2d9e73; }
+  transform: translateY(-3px); }
 
 /* Color hover styles of menu individually */
-.hnItems li:first-child > a:hover {
-  border-bottom: 1.9px solid #fcad26; }
+.hnItems li:first-child > a:hover > .nav-link,
+.hnItems li:first-child > a:focus > .nav-link {
+  border-bottom-color: #fcad26; }
 
-.hnItems li:nth-child(2) > a:hover {
-  border-bottom: 1.9px solid #38c690; }
+.hnItems li:nth-child(2) > a:hover > .nav-link,
+.hnItems li:nth-child(2) > a:focus > .nav-link {
+  border-bottom-color: #38c690; }
 
-.hnItems li:nth-child(3) > a,
-footer .ftItems li:nth-child(3) > a {
-  border-bottom: 1.9px solid #6f42c1; }
+.hnItems li:nth-child(3) > a > .nav-link,
+footer .ftItems li:nth-child(3) > a > .nav-link {
+  border-bottom: 1.9px solid #6f42c1;
+  padding-bottom: 4px; }
 
-.hnItems li:nth-child(5) > a:hover {
-  border-bottom: 1.9px solid #fcad26; }
+.navRightItems li:nth-child(4) > a > .nav-link {
+  border: none; }
+
+.hnItems li:nth-child(5) > a {
+  padding: 7px 0 9px; }
+
+.hnItems li:nth-child(5) > a:hover,
+.hnItems li:nth-child(5) > a:focus {
+  border-bottom-color: #fcad26; }
 
 /* Move search container on child pages to hero like position */
 #search-container.smallSearchContainer {
